# ai_playground

./: 404.html  Dockerfile  README.md  docker-compose.yml  index.html  manifest.json  route-manifest.json  ssr-manifest.json
codebase/: Cargo.toml  build.rs
codebase/benches/: building.rs  building_bench.rs  conv_layer.rs  conv_layer_bench.rs  conv_validate_cache_1_bench.rs  dense_layer.rs  dense_layer_bench.rs  shaders_bench.rs
codebase/src/: lib.rs  utils.rs
codebase/src/chess/: board.rs  coord.rs  game_result.rs  mod.rs  movement.rs  side_dict.rs  test_utils.rs  utils.rs
codebase/src/chess/board/: castle_rights.rs  literals.rs  mod.rs  move_applying.rs
codebase/src/chess/board_controller/: board_hashable.rs  board_repetitions.rs  finding_moves.rs  game_result.rs  mod.rs  move_applying.rs
codebase/src/chess/decision_tree/: best_path_iterator.rs  building.rs  building_exp.rs  cursor.rs  mod.rs  node.rs  results_aggregator.rs  results_aggregator_exp.rs  svg_export.rs
codebase/src/chess/decision_tree/building/: building_error.rs  cache.rs  games_producer.rs  mod.rs  nodes_in_progress_set.rs  options.rs  request.rs  request_storage.rs
codebase/src/chess/decision_tree/building_exp/: Cache.rs  limiting_factors.rs  mod.rs  next_node_strategy.rs  results_aggregator.rs
codebase/src/chess/decision_tree/building_exp_2/: building_error.rs  cache.rs  games_producer.rs  limiting_factors.rs  mod.rs  nodes_in_progress_set.rs  options.rs  request.rs  request_storage.rs
codebase/src/chess/openings/: mod.rs  openings_tree.rs
codebase/src/chess/pieces/: board_piece.rs  mod.rs  piece_dict.rs  piece_type.rs
codebase/src/chess/pieces/ops/: bishop_ops.rs  king_ops.rs  knight_ops.rs  lines.rs  mod.rs  pawn_ops.rs  queen_ops.rs  rook_ops.rs
codebase/src/compiled_protos/: common.rs  mod.rs  model_storage.rs  task_result.rs
codebase/src/gpu/: buffers.rs  checksum.rs  gpu_data.rs  mod.rs  pipeline_objects.rs  pools.rs  shader_context.rs  shader_runner.rs  shader_runner_2.rs  shaders.rs
codebase/src/gpu/shaders/: convolution_forward.glsl  convolution_inputs_grad.glsl  dense_forward.glsl  max_pool_forward.glsl  relu_forward.glsl
codebase/src/gpu/shaders/convolution_forward/: forward.glsl  validate_cache_1.glsl  validate_cache_2.glsl
codebase/src/integration/: array_pair.rs  byte_utils.rs  compression.rs  deserialization.rs  joining.rs  layers_loading.rs  mod.rs  model_deltas.rs  proto_loading.rs  random_picker.rs  serde_utils.rs  serialization.rs
codebase/src/nn/: batch_config.rs  controller.rs  generic_storage.rs  key_assigner.rs  mod.rs  train_config.rs  utils.rs
codebase/src/nn/controller/: evaluating.rs  mod.rs  testing.rs  training.rs
codebase/src/nn/integration_testing/: mod.rs
codebase/src/nn/layers/: concat_layer.rs  convolution_layer.rs  debug_layer.rs  dense_layer.rs  dropout_layer.rs  expand_dim_layer.rs  flatten_layer.rs  max_pool_layer.rs  mod.rs  nn_layer.rs  nn_layers.rs  sequential_layer.rs  stored_array.rs  two_complements_transformer_layer.rs
codebase/src/nn/layers/activation/: mod.rs  relu_layer.rs  sigmoid_layer.rs  tanh_layer.rs
codebase/src/nn/layers/concat_layer/: concat_backward.rs  concat_forward.rs  mod.rs
codebase/src/nn/layers/convolution/: convolution_cpu.rs  convolution_gpu.rs  convolution_layer.rs  mod.rs
codebase/src/nn/layers/dense_layer/: dense_backward.rs  (+2 more)
codebase/src/nn/loss/: cross_entropy_loss.rs  loss_func.rs  mod.rs  mse_loss.rs
codebase/src/nn/lr_calculators/: adam_lr.rs  constant_lr.rs  lr_calculator.rs  mod.rs
codebase/src/protos/: common.proto  model_storage.proto  task_result.proto
new_server/: .gitignore  Cargo.toml
new_server/src/: main.rs  rest_handlers.rs  utils.rs  ws_handlers.rs
new_server/src/data/: clients.rs  current_model.rs  env_config.rs  mod.rs  model_metadata.rs  model_source.rs  task_manager.rs  url_creator.rs
server/: Cargo.toml  Rocket.toml
server/src/: cors.rs  main.rs
server/src/ops/: current_model.rs  lazy.rs  lazy_by_module.rs  mod.rs  model_metadata.rs  model_source.rs  path_utils.rs  task_manager.rs  url_creator.rs
trainer/: .gitignore  Cargo.toml  Dockerfile
trainer/src/: chess.rs  client.rs  digits.rs  env_config.rs  files.rs  main.rs
trainer/src/chess/: endgames_trainer.rs  game_metrics.rs  games_trainer.rs  mod.rs  results_aggregator.rs  subtrees_trainer.rs  train_scheduler.rs  utils.rs
(+373 files in other folders)
