[package]
name = "codebase"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
lazy_static = "1.4.0"
protobuf = "3.2.0"
getrandom = { version = "0.2.7", features = ["js"] }
flate2 = "1.0.24"
xmltree = "0.10.3"

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"