[package]
name = "codebase"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-rand = "0.14.0"
getrandom = "0.2.7"
flate2 = "1.0.24"
xmltree = "0.10.3"
vulkano = "0.32.0"
vulkano-shaders = "0.32.0"
lazy_static = "1.4.0"
nohash-hasher = "0.2.0"
anyhow = { version="1.0.69", features=["backtrace"] }
#rayon = "1.5.3"

[[bench]]
name = "building_bench"
harness = false

[dev-dependencies]
criterion = "0.4.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
