[package]
name = "new_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codebase = { path = "../codebase" }
tokio = { version = "1.21", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
futures = "0.3"
rand = "0.8.5"
uuid = { version = "1.2.1", features = ["v4"] }