[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codebase = { path = "../codebase" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rand = { version="0.8.5", features = ["std_rng"] }
