[package]
name = "trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codebase = { path = "../codebase" }
http = "0.2.8"
reqwest = { version="0.11.12", features=["blocking"] }
rand = "0.8.5"
itertools = "0.10.5"
bloomfilter = "1.0.9"
#dhat = "0.3.2"
#
#[features]
#dhat-heap = []    # if you are doing heap profiling

[profile.dev]
opt-level = 2

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

# For profiling
debug = true
